// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tc-button should expose a static prop getter for icons. 1`] = `
Object {
  "aria-hidden": true,
  "className": "tc-Button-icon",
}
`;

exports[`tc-button should expose a static prop getter for icons. 2`] = `
Object {
  "aria-hidden": true,
  "className": "tc-Button-icon",
  "id": "test",
}
`;
